samples/istio/service-to-service/cc-internal-vs.yaml
# --------------------------------------------------------------------
# Copyright (c) 2022, WSO2 Inc. (http://wso2.com) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# -----------------------------------------------------------------------

apiVersion: v1
kind: Service
metadata:
  labels:
    app: choreo-connect-internal
  name: choreo-connect-internal
spec:
  ports:
    - name: http-internal
      port: 80
      protocol: TCP
      targetPort: 9090
  selector:
    app: choreo-connect-deployment
  type: ClusterIP
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: choreo-connect-internal
spec:
  hosts:
    - "choreo-connect-internal"
  http:
    - headers:
       request:
         set:
           host: gw.wso2.com
      route:
        - destination:
            host: choreo-connect-internal
